--- a/view/ApiMemes.html
+++ b/view/ApiMemes.html
@@ -21,6 +21,9 @@
                   <li class="nav-item">
                         <a class="nav-link" href="contacto.html">Contacto</a>
                   </li>
+                  <li class="nav-item">
+                        <a class="nav-link" href="ApiMemes.html">Memes</a>
+                  </li>
             </ul>
       </header>
       <div>
