--- a/view/contacto.html
+++ b/view/contacto.html
@@ -50,6 +50,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="contacto.html">Contacto</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="view/ApiMemes.html">Memes</a>
+            </li>
         </ul>
     </header>
 
